Added ItemTest, an item that doesn't do anything.  It looks like you eat it when you right-click with it on things.  Nothing complicated.